# assignment-solver

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: algorithms.rs  data_structures.rs
src/: benchmarkInput.csv  main.rs
src/io/: csv.rs  mod.rs
src/io/csv/: mod.rs  test.rs
src/io/csv/test-data/: inputBadAffinity.csv  inputBadMin.csv  inputExtraAffinity.csv  inputExtraData.csv  inputMaxLtMin.csv
src/io/test-data/: inputBadMax.csv  testInput.csv  testOutput.csv
src/network/: arc.rs  feasibility_error.rs  mod.rs  node.rs  test.rs
src/ui/: mod.rs  model.rs  presenter.rs  solver.rs  solver_gui.rs  view.rs
