[package]
name = "assignment-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
bencher = "0.1.5"
puffin = "0.13.2"
puffin_egui = "0.15.0"

[[bench]]
name = "data_structures"
harness = false
