[package]
name = "assignment-solver"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profiling = ["puffin"]

[dependencies]
eframe = "0.18.0"
rfd = "0.8.2"
puffin = { version = "0.13.2", optional = true }

[dev-dependencies]
bencher = "0.1.5"
local-ip-address = "0.4.4"

[[bench]]
name = "data_structures"
harness = false
